--- a/index.html
+++ b/index.html
@@ -1,94 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CodeCats</title>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png">
-    <link rel="manifest" href="images/x-icon/site.webmanifest">
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="logo">
-          <a href="/">
-            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
-          </a>
-        </div>
-        <div class="menu">
-          <a
-            href="https://discord.gg/A9CnsVzzkZ"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/discord.webp" alt="Discord" />
-          </a>
-          <a
-            href="https://twitter.com/CodeCats10k"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/twitter.webp" alt="Twitter" />
-          </a>
-          <a
-            href="https://opensea.io/collection/codecats"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/opensea.webp" alt="Opensea" />
-          </a>
-          <button class="wallet-btn btn" id="connectWallet">
-            <span>Connect Wallet</span>
-          </button>
-        </div>
+<head>
+  <title>BWON</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="images/x-icon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/x-icon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/x-icon/favicon-16x16.png">
+  <link rel="manifest" href="images/x-icon/site.webmanifest">
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class="menu"></div>
+      <div class="logo">
+        <h1>
+          <p> BWON</p>
+        </h1>
       </div>
-    </header>
 
-    <section class="container">
-      <div class="owner-status"></div>
-      <div class="countdown">
-        <ul
-          id="countdown"
-          class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
-        >
-          <li class="clock-item">
-            <span class="count-number days">20</span>
-            <p class="count-text">Days</p>
-          </li>
+      <a href="https://twitter.com/skrjin_bwon" target="_blank" rel="noopener noreferrer">
+        <img src="images/header/twitter.webp" alt="Twitter" />
+      </a>
+      <!-- <button class="wallet-btn btn" id="connectWallet"> -->
+      <!-- <span>Connect Wallet</span> -->
+      <!-- </button> -->
+    </div>
+    </div>
+  </header>
 
-          <li class="clock-item">
-            <span class="count-number hours">20</span>
-            <p class="count-text">Hour</p>
-          </li>
+  <section class="container">
+    <div class="owner-status">
+    </div>
+    <div class="countdown">
+      <p> Bizarre World Of Navillerox Collection</p>
+      <ul id="countdown" class="count-down" data-date="Jun 3, 2022 9:00:00 PM UTC">
+        <li class="clock-item">
+          <span class="count-number days">20</span>
+          <p class="count-text">Days</p>
+        </li>
 
-          <li class="clock-item">
-            <span class="count-number minutes">20</span>
-            <p class="count-text">Min</p>
-          </li>
+        <li class="clock-item">
+          <span class="count-number hours">20</span>
+          <p class="count-text">Hour</p>
+        </li>
 
-          <li class="clock-item">
-            <span class="count-number seconds">20</span>
-            <p class="count-text">Sec</p>
-          </li>
-        </ul>
-        <h1>NFT Drop Coming Soon!!</h1>
-               
-        <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
-        </a>
-      </div>
-    </section>
+        <li class="clock-item">
+          <span class="count-number minutes">20</span>
+          <p class="count-text">Min</p>
+        </li>
 
-    <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
-    <script src="js/countdown.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+        <li class="clock-item">
+          <span class="count-number seconds">20</span>
+          <p class="count-text">Sec</p>
+        </li>
+      </ul>
+      <h1>NFT Drop Coming Very Soon!</h1>
+
+      <p>Navillerox is arriving! First batch will be available very soon!</p>
+      <a href="https://twitter.com/skrjin_bwon" target="_blank" rel="noopener noreferrer"
+        class="hero-btn btn"><span>Follow us and let's build
+          the community</span>
+      </a>
+    </div>
+  </section>
+
+  <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
+  <script src="js/countdown.js"></script>
+  <script src="js/app.js"></script>
+</body>
+
 </html>
